fix border alignments on TOC

--- a/ui/public/theme/base.css
+++ b/ui/public/theme/base.css
@@ -473,6 +473,7 @@ code {
     color: #888888;
     margin: 10px 0 0 0;
     padding: 0 15px;
+    cursor: default;
     }
 
     .NuoLeftMenuCollapsed>.details>.summary {
@@ -538,7 +539,11 @@ code {
 }
 
 .NuoLeftMenuCollapsed *>.NuoLeftMenuItem:hover>label {
-    padding: 8px 5px;
+    padding-top: 8px;
+        padding-right: 5px;
+        padding-bottom: 8px;
+        padding-left: 5px;
+        height: 40px;
     border-right: 1px solid;
     border-top: 1px solid;
     border-bottom: 1px solid;
